# async_await

./: Cargo.toml  README.md
src/: a_a_server_tide_adapter.rs  adapters.rs  consts.rs  error.rs  main.rs  mpmc_queue.rs  server.rs
src/a_a_server_tide_adapter/: a_a_server_builder_tide_adapter.rs
src/a_a_server_tide_adapter/msg_queue/: msg.rs
src/a_a_server_tide_adapter/unit_tests/: build.rs
src/adapters/: server_tide.rs
src/adapters/server_tide/: server_builder_tide.rs
src/adapters/server_tide/msg_queue/: msg.rs
src/adapters/server_tide/unit_tests/: build.rs  serve.rs
src/consts/msg/: en_us.rs
src/error/: io_error.rs
src/ports/: server.rs
src/ports/server/: event.rs  prelude.rs  server_builder.rs
src/server/: bind_network_interface.rs  mode.rs  msg_queue.rs  recipient.rs  server_builder.rs  terminate_condition.rs  tide_app.rs  unit_tests.rs
src/server/msg_queue/: msg.rs
src/server/server_builder/: unit_tests.rs
src/server/server_builder/unit_tests/: build.rs  new.rs
src/server/unit_tests/: block.rs  build.rs  launch.rs  new.rs  run_until.rs  serve.rs  start.rs
