[package]
authors = ["Brad Gibson <brad@tpfs.io>"]
categories = []
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "async_await"
readme = "README.md"
repository = "https://github.com/u007d/aa"
version = "0.1.0"

[dependencies]
crossbeam-channel = "0.4.0"
crossbeam-deque = "0.7.2"
derive_more = "0.99.2"
pico-args = "0.3.0"
tide = "0.3.0"

[dev-dependencies]
all_asserts = "1.0.0"
[profile.dev]
codegen-units = 32
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
